--- a/ElectronicShopManager/ElectronicShopManager/packages.config
+++ b/ElectronicShopManager/ElectronicShopManager/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.0.78" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net472" />
 </packages>
